Removed: api keys from .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-ASSEMBLYAI_API_KEY=86100549cebc4d97a3311f50abac6efc 
-GEMINIAI_API_KEY=AIzaSyC0MhfcZWvNGJr8gWWDaTXd79c1f23ciFE 
+ASSEMBLYAI_API_KEY=
+GEMINIAI_API_KEY=
 JWT_SECRET=7c6f1f6e064d6f9f9f4b2e6faa1d57e4
-MONGODB_URI=mongodb+srv://bakkeshpruthvi49:9844@cluster0.it4pita.mongodb.net/videotoblog?retryWrites=true&w=majority&appName=Cluster0 
+MONGODB_URI= 
